<resources>
    <string name="order_sum">Order Summary</string>
    <string name="app_name">My Cart</string>
    <string name="img_desc">Product Thumbnail</string>
    <string name="product_name">Product Name</string>
    <string name="search_txt">Search product...</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total">ORDER TOTAL</string>
    <string name="init_value">0 VND</string>
    <string name="checkout">Checkout</string>
    <string name="Quantity">0</string>
    <string name="thumbnail">thumbnail</string>
    <string name="button">button</string>
</resources>