<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/smoke"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/thumbnailRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thumbnail"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:src="@drawable/items"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/nameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginRight="50dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/product_name"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/thumbnailRow"
                app:layout_constraintTop_toTopOf="@+id/thumbnailRow" />

            <TextView
                android:id="@+id/unitPriceRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/init_value"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/teal_200"
                app:layout_constraintStart_toEndOf="@id/thumbnailRow"
                app:layout_constraintTop_toBottomOf="@+id/nameRow"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/sumPriceRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init_value"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/unitPriceRow" />

            <LinearLayout
                android:id="@+id/quantity_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"

                app:layout_constraintStart_toEndOf="@+id/thumbnailRow"
                app:layout_constraintTop_toBottomOf="@+id/unitPriceRow">

                <ImageButton
                    android:id="@+id/minusBtn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:backgroundTint="@color/smoke"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/minus"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/quantityRow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:text="@string/Quantity" />

                <ImageButton
                    android:id="@+id/addBtn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:backgroundTint="@color/smoke"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/add"
                    tools:ignore="VectorDrawableCompat"  />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>